Added content to index, about, and contact pages, added images

--- a/about.html
+++ b/about.html
@@ -21,12 +21,33 @@
         <!-- Navigation menu with three links: portfolio, about, contact  -->
         <nav>
             <ul>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="index.html">Portfolio</a></li>
+                <li><a href="#">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
     <!-- HEADER END -->
+    <div>
+    <!-- start of first column -->
+        <img src="img/mail.png">
+    <!-- end of first column -->
     
-</body></html>
+    <!-- start of second column -->
+        <h3>About</h3>
+        <p>Hello, I am Matt. This is my portfolio where I share all of my favorite work.</p>
+        <p>If you would like to follow my on Twitter my username is <a href="https://twitter.com" target="_blank">@username.</a></p>
+    <!-- end of second column -->
+    </div>
+    <!-- FOOTER BEGIN -->
+    <footer>
+        <!-- clickable links to twitter that opens in a new tab -->
+        <a href="https://twitter.com" target="_blank"><img src="img/twitter-wrap.png"></a>
+        <!-- clickable links to facebook that opens in a new tab -->
+        <a href="https://facebook.com" target="_blank"><img src="img/facebook-wrap.png"> </a>
+        <!-- copyright -->
+        <p>&copy; 2021 Matt Lutz</p>
+    </footer>
+    <!-- FOOTER END -->
+    
+</body></html> 
