--- a/about.html
+++ b/about.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- TITLE TAG -->
     <title>Matt Lutz | Front End Web Developer</title>
+     <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
+    <!-- CSS Links -->
+    <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
 </head>
 
 <body>
@@ -14,7 +20,7 @@
     <!-- HEADER START -->
     <header>
         <!-- Clickable title that brings you to the inex page -->
-        <a href="index.html">
+        <a id="logo" href="index.html">
             <h1>Matt</h1>
             <h2>Front End Web Developer</h2>
         </a>
@@ -22,7 +28,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Portfolio</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="#" class="selected">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
