added responsive css file. added styles

--- a/about.html
+++ b/about.html
@@ -13,6 +13,7 @@
     <!-- CSS Links -->
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet">
 </head>
 
 <body>
@@ -34,9 +35,9 @@
         </nav>
     </header>
     <!-- HEADER END -->
-    <div>
+    <div id="wrapper">
     <!-- start of first column -->
-        <img src="img/mail.png">
+        <img class="profile-photo" src="img/profile-photo.jpg">
     <!-- end of first column -->
     
     <!-- start of second column -->
