--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@
     <!-- CSS Link -->
     <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/responsive.css" rel="stylesheet">
 </head>
 
 <body>
@@ -35,9 +36,9 @@
     </header>
     <!-- HEADER END -->
     
-    <div>
+    <div id="wrapper">
     <!-- start of first column -->
-       <section>
+       <section id="primary">
         <!-- title -->
         <h3>General Information</h3>
         <!-- general info paragraph -->
@@ -46,7 +47,7 @@
     <!-- end of first column -->
         
     <!-- start of second column -->
-        <section>
+        <section id="secondary">
             <!-- title -->
             <h3>Contact Information</h3>
             <!-- contact info -->
