added contact page images

--- a/contact.html
+++ b/contact.html
@@ -51,10 +51,10 @@
             <!-- title -->
             <h3>Contact Information</h3>
             <!-- contact info -->
-            <ul>
-                <li><a href="tel:5026452230">(502) 645-2230</a></li>
-                <li><a href="mailto:lutz.matt@gmail.com">lutz.matt@gmail.com</li>
-                <li><a href="https://twitter.com">@username</a></li>
+            <ul class="contact-info">
+                <li class="phone"><a href="tel:5026452230">(502) 645-2230</a></li>
+                <li class="email"><a href="mailto:lutz.matt@gmail.com">lutz.matt@gmail.com</a></li>
+                <li class="twitter"><a href="https://twitter.com">@username</a></li>
             </ul>
         </section>
     <!-- end of second column -->
